--- a/src/assets/css/vueWysiwyg.css
+++ b/src/assets/css/vueWysiwyg.css
@@ -63,7 +63,7 @@
   min-height: 150px;
   padding: 12px 8px 16px 8px;
   line-height: 1.33;
-  font-family: inherit;
+  font-family: "Roboto Slab", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: inherit;
   overflow-y: auto;
 }
